2.15.5
 - fix: right-click menu not working for plot widgets (#160)
2.15.4
 - fix: very small numbers not parsed when showing metadata (#158)
 - fix: do not allow question mark "?" in exported file names (#156)
 - fix: do not override files when exporting data (#153)
 - fix: remove the "so2exp" prefix when exporting data (#157)
2.15.3
 - build: PyInstaller to rebuild its bootloader (avoid false positive
   malware detection)
2.15.2
 - fix: handle zero-valued contour spacing
 - setup: bump dclab to 0.57.4 (handle zero-valued spacing for KDE contour)
2.15.1
 - fix: statistics not updating when changing plot axes (#154)
 - setup: bump dclab from 0.57.0 to 0.57.1
2.15.0
 - enh: avoid creating hierarchy when no filters are applied (speed)
 - enh: cache computed statistics
 - ref: avoid division-by-zero warning
 - setup: bump dclab from 0.56.3 to 0.57.0 (speed)
2.14.3
 - fix: intermediate plotting of first event whenever a slot is added
 - fix: catch zero-division warning when plotting empty image
 - enh: remember selected events in QuickView
 - enh: avoid showing first dataset event when user clicks in QuickView
 - setup: bump dclab from 0.55.7 to 0.56.3 (enhanced basin support)
2.14.2
 - setup: bump dclab from 0.55.6 to 0.55.7
2.14.1
 - fix: perform sanity check for contour spacing before plotting
 - fix: use pyqtgraph.SpinBox to edit box filters (#149)
 - enh: minor optimization of min/max feature algorithm
 - enh: only preselect innate features when computing statistics (#150)
 - setup: bump dclab to 0.55.6 (new scalar features, dcor access)
 - setup: bump pyqtgraph from 0.12.4 to 0.13.3
2.14.0
 - ref: don't set RTDCBase.identifier to slot identifier
 - setup: drop support for Python 3.8
 - setup: bump dclab from 0.54.2 to 0.55.4 (better DCOR support)
 - build: use Python 3.10 for building executables
2.13.7
 - ci: fix rtd build pipeline
 - setup: bump dclab from 0.52.0 to 0.54.2 (improved basin support)
2.13.6
 - ci: fix Windows build pipeline
2.13.5