@@ -1,6 +1,7 @@
 # flake8: noqa: F401
 from .bg_thread import run_async
 from .double_spin_box_nan import DoubleSpinBoxNan
+from .feature_combobox import FeatureComboBox
 from .key_value_table_widget import KeyValueTableWidget
 from .mdi_subwindow_wo_close import MDISubWindowWOButtons
 from .qrangeslider import QRangeSlider
